:wrench: Fix safari video overflow.

--- a/markup/modules/laser/laser.styl
+++ b/markup/modules/laser/laser.styl
@@ -1,5 +1,6 @@
 .detached-screen__laser
   background #ffffff
+  position: relative
   .content
     position: relative
 
